--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,7 +1,7 @@
 .tooltip {
   position: relative;
   padding: 3px 5px;
-  display: block;
+  display: inline-block;
   opacity: 0;
   z-index: 20;
   background-color: #fff;
@@ -14,5 +14,5 @@
 .tooltip_state_visible {
   opacity: 1;
   z-index: 1;
-  transform: translate3d(100%, 0, 0);
+  transform: translate3d(20%, 0, 0);
 }
