--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -2,7 +2,7 @@
   position: relative;
   color: #3879d9;
   text-decoration: none;
-  transition-duration: 0.3s;
+  transition-duration: .3s;
   transition-property: color;
   cursor: pointer;
 }
@@ -17,8 +17,8 @@
   content: '';
   color: inherit;
   background-color: currentColor;
-  transform: scaleY(0.5);
-  transition: opacity 0.2s;
+  transform: scaleY(.5);
+  transition: opacity .2s;
 }
 
 .link:hover::after {
