--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,12 +1,13 @@
 .tooltip {
   position: relative;
-  padding: 3px 5px;
+  padding: 5px;
   display: inline-block;
   opacity: 0;
   z-index: 20;
   background-color: #fff;
   box-shadow: 0 5px 10px 0 rgba(63, 73, 96, .2);
   border: 1px solid #bdbec1;
+  border-radius: 2px;
   transition: opacity .3s .2s, transform .3s .2s;
   pointer-events: none;
 }
@@ -14,5 +15,5 @@
 .tooltip_state_visible {
   opacity: 1;
   z-index: 1;
-  transform: translate3d(20%, 0, 0);
+  transform: translate3d(15px, 10px, 0);
 }
