--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-body {
+body { /* stylelint-disable-line */
   box-sizing: border-box;
   font-family: Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.3;
-  color: #000000;
+  color: #000;
 }
